feat: add note to contacts

--- a/style.css
+++ b/style.css
@@ -226,6 +226,13 @@ hr {
   background-position: center;
 }
 
+.contact-note {
+  padding-left: 1.25rem;
+  color: #ffec82;
+  font-size: 1rem;
+  font-weight: 400;
+}
+
 .contacts-item:nth-child(1)::before {
   background-image: url("./assets/svg/discord.svg");
   background-size: 100%;
@@ -495,6 +502,10 @@ a:hover .rss-logo {
   }
 
   .contact:hover {
+    color: #37576b;
+  }
+
+  .contact-note {
     color: #37576b;
   }
 
