--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
@@ -57,8 +57,8 @@ h6 {
 .wrapper {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   max-width: 1400px;
   margin: 0 auto;
   padding: 0.5rem;
@@ -88,13 +88,13 @@ h6 {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   margin: 0.5rem 0;
   font-weight: 700;
   text-transform: uppercase;
@@ -117,7 +117,7 @@ h6 {
 .container,
 .sidebar {
   -webkit-box-shadow: 0 0 7px #666666;
-          box-shadow: 0 0 7px #666666;
+  box-shadow: 0 0 7px #666666;
 }
 
 .sidebar {
@@ -131,7 +131,7 @@ h6 {
   color: #ffffff;
   background-color: #37576b;
   -webkit-box-shadow: 0 0 7px #666666;
-          box-shadow: 0 0 7px #666666;
+  box-shadow: 0 0 7px #666666;
 }
 
 .header {
@@ -154,7 +154,7 @@ h6 {
   border: 3px solid #37576b;
   border-radius: 4rem;
   -webkit-box-shadow: 0 0 7px #666666;
-          box-shadow: 0 0 7px #666666;
+  box-shadow: 0 0 7px #666666;
 }
 
 .info-title-right,
@@ -163,14 +163,14 @@ h6 {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   min-height: 3.125rem;
   padding-left: 2.5rem;
   color: #ffffff;
   background-color: #37576b;
   -webkit-box-shadow: 0 0 7px #666666;
-          box-shadow: 0 0 7px #666666;
+  box-shadow: 0 0 7px #666666;
 }
 
 .info-title-right {
@@ -233,25 +233,37 @@ hr {
   font-weight: 400;
 }
 
+.contacts-item::before,
+.skills-item::before,
+.design-item::before {
+  background-size: 1.5rem;
+}
+
 .contacts-item:nth-child(1)::before {
-  background-image: url("./assets/svg/discord.svg");
-  background-size: 100%;
+  background-image: url("./assets/svg/linkedIn.svg");
+  background-size: 1.7rem;
 }
 
 .contacts-item:nth-child(2)::before {
   background-image: url("./assets/svg/telegram.svg");
+  background-size: 1.7rem;
 }
 
 .contacts-item:nth-child(3)::before {
   background-image: url("./assets/svg/octocat.svg");
-  background-size: 120%;
+  background-size: 2rem;
 }
 
 .contacts-item:nth-child(4)::before {
-  background-image: url("./assets/svg/codewars.svg");
+  background-image: url("./assets/svg/discord.svg");
+  background-size: 2rem;
 }
 
 .contacts-item:nth-child(5)::before {
+  background-image: url("./assets/svg/codewars.svg");
+}
+
+.contacts-item:nth-child(6)::before {
   background-image: url("./assets/svg/location.svg");
 }
 
@@ -265,7 +277,7 @@ hr {
 
 .skills-item:nth-child(3)::before {
   background-image: url("./assets/svg/sass.svg");
-  background-size: 100%;
+  background-size: 2rem;
 }
 
 .skills-item:nth-child(4)::before {
@@ -273,7 +285,20 @@ hr {
 }
 
 .skills-item:nth-child(5)::before {
+  background-image: url("./assets/svg/typescriptlang.svg");
+}
+
+.skills-item:nth-child(6)::before {
   background-image: url("./assets/svg/git.svg");
+  background-size: 2rem;
+}
+
+.skills-item:nth-child(7)::before {
+  background-image: url("./assets/svg/eslint.svg");
+}
+
+.skills-item:nth-child(8)::before {
+  background-image: url("./assets/svg/webpack.svg");
 }
 
 .design-item:nth-child(1)::before {
@@ -290,7 +315,7 @@ hr {
 
 .design-item:nth-child(4)::before {
   background-image: url("./assets/svg/auto-cad.svg");
-  background-size: 60%;
+  background-size: 1.2rem;
 }
 
 .design-item:nth-child(5)::before {
@@ -313,6 +338,20 @@ hr {
   padding-top: 0.625rem;
 }
 
+.company {
+  font-size: 1.1rem;
+  line-height: 140%;
+}
+
+.company-link {
+  color: #37576b;
+  font-weight: 600;
+}
+
+.company-link:hover {
+  text-decoration: underline;
+}
+
 mark {
   display: inline-block;
   margin-bottom: 0.7rem;
@@ -322,20 +361,12 @@ mark {
   background-color: #ffec82;
 }
 
-.code {
-  display: inline-block;
-  padding: 0 1rem;
-  font-size: 1rem;
-  background-color: #ffec82;
-  white-space: pre-wrap;
-}
-
 .projects-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   padding-right: 1.25rem;
   justify-content: center;
   gap: 0.7rem;
@@ -362,8 +393,8 @@ mark {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   background-color: #37576b;
 }
 
@@ -378,11 +409,11 @@ mark {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .github-logo,
@@ -393,8 +424,10 @@ mark {
 
 a:hover .github-logo,
 a:hover .rss-logo {
-  -webkit-filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(299deg) brightness(107%) contrast(103%);
-          filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(299deg) brightness(107%) contrast(103%);
+  -webkit-filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(299deg)
+    brightness(107%) contrast(103%);
+  filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(299deg)
+    brightness(107%) contrast(103%);
 }
 
 @media (max-width: 1040px) {
@@ -431,8 +464,8 @@ a:hover .rss-logo {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
+    -ms-flex-pack: end;
+    justify-content: flex-end;
     padding: 0.5rem;
     font-size: 48px;
     cursor: pointer;
@@ -445,11 +478,11 @@ a:hover .rss-logo {
     right: 0;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
+    -ms-flex-align: start;
+    align-items: flex-start;
     width: 16rem;
     padding: 3.5rem 1rem 1rem;
     font-weight: 400;
@@ -482,8 +515,8 @@ a:hover .rss-logo {
   .container {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
   }
 
   h1,
@@ -522,8 +555,8 @@ a:hover .rss-logo {
 
   .projects-list {
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     padding-right: 0;
   }
 }
